updated image files